test: Add test configuration and cleanup
- Add application-test.properties for test environment
- Configure H2 in-memory database for testing
- Set up proper test logging configuration
- Add test-specific Spring profiles
- Configure test database properties
- Remove unused zones.html template

This finalizes the test configuration and cleans up unused files.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,17 @@
+# Test configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Logging configuration for tests
+logging.level.com.maciejwasiak.locon=DEBUG
+logging.level.org.springframework.security=WARN
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Disable security for easier testing
+spring.security.user.name=test
+spring.security.user.password=test
